[package]
name = "cur"
version = "0.5.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
edition = "2021"
description = "The tool that will hunt for your regular expression."
license = "MIT"
repository = "https://github.com/jsim2010/cur"
readme = "README.md"
keywords = ["regular", "expression", "hunt"]
categories = ["text-processing", "no-std"]

[dependencies]
cur_macro = "0.5"
log = "0.4"
once_cell = "1.8"

[dev-dependencies]
env_logger = "0.9"
test-log = "0.2"

[workspace]
members = [
    "cur_macro",
]
