[package]
name = "cur"
version = "0.2.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
edition = "2018"
description = "The tool that will hunt for your regular expression."
license = "MIT"
repository = "https://github.com/jsim2010/cur"
readme = "README.md"
keywords = ["regular", "expression", "hunt"]
categories = ["text-processing", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cur_macro = { path = "../cur_macro" }
once_cell = "1.4.0"

[lib]
# There are currently no doctests and having one would require a global memory allocator.
doctest = false
# Required to make cargo-readme work; see https://github.com/livioribeiro/cargo-readme/issues/32.
path = "src/lib.rs"
