[package]
name = "cur_macro"
version = "0.3.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
edition = "2018"
description = "Procedural macros for `cur`"
license = "MIT"
repository = "https://github.com/jsim2010/cur_macro"
readme = "README.md"
keywords = ["cur", "macro", "proc_macro"]
categories = ["no-std"]

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = { version = "1.0.0", features = ["full", "extra-traits"] }

[dev-dependencies]
cur = { path = ".." }

[lib]
proc-macro = true
