[package]
name = "cur_macro"
version = "0.5.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
edition = "2021"
description = "Procedural macros for `cur`"
license = "MIT"
repository = "https://github.com/jsim2010/cur_macro"
readme = "README.md"
keywords = ["cur", "macro", "proc_macro"]
categories = ["no-std"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
cur = { path = ".." }

[lib]
proc-macro = true
